# MineSearch-V2-Weltklasse

./: .dockerignore  .env.backup  .env.backup.v2.0  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .replit  ACTIVE_UI_DOCUMENTATION.md  AGENT_LIMITS_CHANGES.md  API_KEYS_GUIDE.md  BUTTON_ONCLICK_SYNTAX_REPORT.json  CANCELLATION_FEATURE_19062025.md  CANCEL_BUTTON_FIX_SUMMARY_26062025.md  CASA_BERARDI_TEST_RESULTS.md  CHANGELOG.md  CHANGELOG.txt  CLAUDE.md  COMPLETE_DOCUMENTATION_SUMMARY_23062025.md  CONDITIONAL_FIELD_STATISTICS_VALIDATION.md  DATENKONSISTENZ_FIXES_ZUSAMMENFASSUNG.md  DEPLOYMENT_READY_19062025.md  DEPLOY_KEY_SETUP.md  DETAIL_BUTTONS_REPARATUR_ABSCHLUSSBERICHT.md  Dockerfile  FIELD_ORDER_FIX_PREVENTION.md  FINALE_UI_VALIDIERUNG_ABSCHLUSSBERICHT.md  FINAL_FIXES_23062025.md  FINAL_QUALITY_REPORT.json  FINAL_VERIFICATION_23062025.md  FIXES_21062025.md  FIXES_22062025.md  FIXES_23062025.md  FIX_SUMMARY_21062025.md  FRONTEND_TEST_COMPREHENSIVE_REPORT.md  GEOGRAPHIC_CONSTRAINTS_19062025.md  GITHUB_ACCESS_GUIDE.md  JAVASCRIPT_SYNTAX_ANALYSIS_REPORT.json  LARONDE_TEST_RESULTS.md  LATEST_UPDATE_v2.18.11.md  (+414 more)
.github/: dependabot.yml  pull_request_template.md
.streamlit/: config.toml
.swarm/: memory.db-shm  memory.db-wal
alembic/: env.py
backend/: DATENBANK_VOLLSTÄNDIG_REPARIERT.md  DUPLIKATE_REPARATUR_ABSCHLUSS_BERICHT.md  SEQUENTIAL_FIELD_ORCHESTRATOR_DOCUMENTATION.md  activate_monitoring.py  add_author_headers.py  add_foreign_keys.py  analyze_csv_complete.py  analyze_database_contamination.py  analyze_duplicates.py  batch_route_fixed.py  check_current_schema.py  check_db.py  cleanup_accent_duplicates.py  cleanup_database_normalization.py  cleanup_lookup_tables.py  cleanup_lookup_tables_original.py  company_types_nm_migration_report_20250907_113156.txt  complete_deduplication_solution.py  complete_duplicate_analysis.py  complete_remaining_duplicates_cleanup.py  create_missing_tables.py  database_cleanup_companies.py  database_cleanup_countries.py  database_cleanup_script.py  database_cleanup_test_entries.py  database_normalization_complete.py  debug_3nf_schema.py  debug_normalization.py  deduplication_report_20250907_000228.json  deduplication_report_20250907_075423.json  deduplication_report_20250907_075621.json  duplicate_analysis_report_20250906_235653.json  duplicate_prevention_enhancement.py  duplicate_prevention_guards.py  duplicate_prevention_migration_20250907_080419.json  enhance_normalized_manager_duplicates.py  enhanced_search_operations.py  extraction_validators.py  final_duplicates_cleanup.py  fix_activity_status_duplicates.py  (+44 more)
config/: .env.example  field_names.json  production_settings.py
data/: minesearch.db
database_backups_consolidation/: memory.db_backup_consolidation_20250820_152758
db_utils_root/: db_utils.py
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  SYSTEM_DOCUMENTATION.md
documentation/: AGENT_DUPLIKATE_ANALYSE_27062025.md  AI_AGENT_TECH_STACK_RESEARCH_27062025.md  ANTHROPIC_COMPLETE_TEST_REPORT_13072025.md  API_DOCUMENTATION.md  CANCELLATION_FIX_26062025.md  CODEBASIS_BEREINIGUNG_27062025.md  CODEBASIS_BEREINIGUNG_ABSCHLUSS_27062025.md  CODEBASIS_BEREINIGUNG_VOLLSTAENDIG_12072025.md  CODEBASIS_STRUKTUR_ANALYSE_25062025.md  CODE_AUDIT_BERICHT_20250911.md  COMPREHENSIVE_INDIVIDUAL_MODEL_REPORT_FINAL_13072025.md  DATABASE_ROUTING_FIX_VOLLSTAENDIG_14072025.md  DEVELOPMENT_GUIDE.md  FIXES_DOCUMENTATION_23062025.md  (+46 more)
(+1388 files in other folders)
